--- a/syntax/dune
+++ b/syntax/dune
@@ -1,7 +1,7 @@
 (library
  (name syntax)
  (preprocess
-  (pps ppx_deriving.show)))
+  (pps ppx_deriving.show ppx_deriving.eq)))
 
 (ocamllex lexer)
 
